[#187467036] Fixing a bug in handling null arrays and large refactoring (#49)
* wip refactoring and bug fix

* [#187467036] Refactor to encapsulate Trino response into static types

Created a record to represent the trino response page and extract relatively static structure from the JsonNode into the record

* [#187467036] Cleaned up most warnings

* [#187467036] refactoring to simplify some methods

---------

Co-authored-by: Usanthan <usanthan@dnastack.com>